fix: standardize spacing

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,8 @@
   --font-weight-semibold: 600;
   --font-weight-bold: 700;
 
+  --spacing-xxxs: 4px;
+  --spacing-xxs: 8px;
   --spacing-xs: 16px;
   --spacing-sm: 24px;
   --spacing-md: 32px;
